--- a/docs/index.css
+++ b/docs/index.css
@@ -1,9 +1,15 @@
 /* src/style.css */
-body {
-}
 #root {
   display: flex;
   gap: 30px;
+}
+.canvas-cont {
+  position: relative;
+}
+.canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .row {
   display: flex;
